Completed header and added local fonts

--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <title>Domein.shop</title>
 </head>
 <body>
+  <header class="header-domainshop">
+    <div class="header-elements">
+      <h1 class="header-title">Domein.shop</h1>
+      <h2 class="header-slogan">Jouw domeinnaam registreren in slechts 1 minuut!</h2>
+      <span>
+        <form onsubmit="hier-is-js-voor-nodig">
+            <label for="domain-name">
+              <input class="input-domain-name" type="text" placeholder="Is jouw domein nog vrij?"  id="domain-name"/>
+            </label>
+            <button type="submit" class="button-domain-name">Check beschikbaarheid</button>
+        </form>
+      </span>
+    </div>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 
 </body>
 </html>
