added elements of contact

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/styles.css">
@@ -22,7 +22,14 @@
     </div>
   </header>
   <main>
+    <section class="testimonials">
 
+    </section>
+    <section class="contact">
+      <img class="contact-image" src="assets/images/callcenter.jpg" width="100%" alt="Callcenter image" />
+      <p class="contact-subtext">Je kunt 7 dagen per week bij ons terecht. Ons <a href="team.html">team</a> van vakkundige medewerkers helpt je graag op weg.
+      </p>
+    </section>
   </main>
   <footer>
 
