--- a/index.html
+++ b/index.html
@@ -6,30 +6,60 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     <title>Domein.shop</title>
 </head>
+
 <body>
+
+<!--  HEADER  -->
   <header class="header-domainshop">
     <div class="header-elements">
       <h1 class="header-title">Domein.shop</h1>
-      <h2 class="header-slogan">Jouw domeinnaam registreren in slechts 1 minuut!</h2>
+      <p class="header-slogan">Jouw domeinnaam registreren in slechts 1 minuut!</p>
       <span>
         <form onsubmit="hier-is-js-voor-nodig">
             <label for="domain-name">
               <input class="input-domain-name" type="text" placeholder="Is jouw domein nog vrij?"  id="domain-name"/>
             </label>
-            <button type="submit" class="button-domain-name">Check beschikbaarheid</button>
+            <button type="submit" class="domain-name-button">Check beschikbaarheid</button>
         </form>
       </span>
     </div>
   </header>
-  <main>
-    <section class="testimonials">
 
+<!--  MAIN  -->
+  <main>
+
+    <!--  TESTIMONIALS  -->
+    <section class="testimonial-section">
+      <h2>Wat zeggen klanten over ons</h2>
+      <article class="testimonial">
+        <img class="testimonial-quote-icon" src="./assets/icons/quote-left.png" alt="Quote-image">
+        <blockquote class="testimonial-quote">Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk.
+          Snelle response, zelfs op momenten dat je het niet verwacht.</blockquote>
+        <img class="testimonial-portrait" src="./assets/images/avatar-jane.png" alt="Picture of customer">
+        <p class="testimonial-name">Jane Doe, Managing Director</p>
+      </article>
+      <article class="testimonial">
+        <img class="testimonial-quote-icon" src="./assets/icons/quote-left.png" alt="Quote-image">
+        <blockquote class="testimonial-quote">Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen
+          en goede service maakt dat ik TransIP aan iedereen aanbeveel.
+        </blockquote>
+        <img class="testimonial-portrait" src="./assets/images/avatar-john.png" alt="Picture of customer">
+        <p class="testimonial-name">John Smith, Frontend Developer</p>
+      </article>
     </section>
-    <section class="contact">
+
+    <!-- CONTACT  -->
+    <section class="contact-section">
+      <h2>Wij staan voor je klaar</h2>
       <img class="contact-image" src="assets/images/callcenter.jpg" width="100%" alt="Callcenter image" />
       <p class="contact-subtext">Je kunt 7 dagen per week bij ons terecht. Ons <a href="team.html">team</a> van vakkundige medewerkers helpt je graag op weg.
       </p>
+      <form action=""></form>
     </section>
+
+    <form onsubmit="hier-hebben-we-javascript-voor-nodig">
+      <button class="contact-button" type="submit" >Neem contact op</button>
+    </form>
   </main>
   <footer>
 
