Finished Support and Footer. Assignment completed

--- a/index.html
+++ b/index.html
@@ -1,69 +1,127 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <title>Domein.shop</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="fonts/fonts.css">
+  <title>Domein.shop</title>
 </head>
 
 <body>
 
 <!--  HEADER  -->
-  <header class="header-domainshop">
-    <div class="header-elements">
-      <h1 class="header-title">Domein.shop</h1>
-      <p class="header-slogan">Jouw domeinnaam registreren in slechts 1 minuut!</p>
-      <span>
+<header class="header-domainshop">
+  <div class="header-elements">
+    <h1 class="header-title">Domein.shop</h1>
+    <p class="header-slogan">Jouw domeinnaam registreren in slechts 1 minuut!</p>
+    <span>
         <form onsubmit="hier-is-js-voor-nodig">
             <label for="domain-name">
-              <input class="input-domain-name" type="text" placeholder="Is jouw domein nog vrij?"  id="domain-name"/>
+              <input class="input-domain-name" type="text" placeholder="Is jouw domein nog vrij?" id="domain-name"/>
             </label>
             <button type="submit" class="domain-name-button">Check beschikbaarheid</button>
         </form>
       </span>
-    </div>
-  </header>
+  </div>
+</header>
 
 <!--  MAIN  -->
-  <main>
+<main>
 
-    <!--  TESTIMONIALS  -->
-    <section class="testimonial-section">
-      <h2>Wat zeggen klanten over ons</h2>
-      <article class="testimonial">
-        <img class="testimonial-quote-icon" src="./assets/icons/quote-left.png" alt="Quote-image">
-        <blockquote class="testimonial-quote">Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk.
-          Snelle response, zelfs op momenten dat je het niet verwacht.</blockquote>
-        <img class="testimonial-portrait" src="./assets/images/avatar-jane.png" alt="Picture of customer">
-        <p class="testimonial-name">Jane Doe, Managing Director</p>
-      </article>
-      <article class="testimonial">
-        <img class="testimonial-quote-icon" src="./assets/icons/quote-left.png" alt="Quote-image">
-        <blockquote class="testimonial-quote">Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen
-          en goede service maakt dat ik TransIP aan iedereen aanbeveel.
-        </blockquote>
-        <img class="testimonial-portrait" src="./assets/images/avatar-john.png" alt="Picture of customer">
-        <p class="testimonial-name">John Smith, Frontend Developer</p>
-      </article>
-    </section>
+  <!--  TESTIMONIALS  -->
+  <section class="testimonial-section">
+    <h2>Wat zeggen klanten over ons</h2>
+    <article class="testimonial">
+      <img class="testimonial-quote-icon" src="./assets/icons/quote-left.png" alt="Quote-image">
+      <blockquote class="testimonial-quote">Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer
+        klantvriendelijk.
+        Snelle response, zelfs op momenten dat je het niet verwacht.
+      </blockquote>
+      <img class="testimonial-portrait" src="./assets/images/avatar-jane.png" alt="Picture of customer">
+      <p class="testimonial-name">Jane Doe, Managing Director</p>
+    </article>
+    <article class="testimonial">
+      <img class="testimonial-quote-icon" src="./assets/icons/quote-left.png" alt="Quote-image">
+      <blockquote class="testimonial-quote">Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen
+        en goede service maakt dat ik TransIP aan iedereen aanbeveel.
+      </blockquote>
+      <img class="testimonial-portrait" src="./assets/images/avatar-john.png" alt="Picture of customer">
+      <p class="testimonial-name">John Smith, Frontend Developer</p>
+    </article>
+  </section>
 
-    <!-- CONTACT  -->
-    <section class="contact-section">
-      <h2>Wij staan voor je klaar</h2>
-      <img class="contact-image" src="assets/images/callcenter.jpg" width="100%" alt="Callcenter image" />
-      <p class="contact-subtext">Je kunt 7 dagen per week bij ons terecht. Ons <a href="team.html">team</a> van vakkundige medewerkers helpt je graag op weg.
+  <!-- CONTACT  -->
+  <section class="contact-section">
+    <h2>Wij staan voor je klaar</h2>
+    <img class="contact-image" src="assets/images/callcenter.jpg" width="100%" alt="Callcenter image"/>
+    <p class="contact-subtext">Je kunt 7 dagen per week bij ons terecht. Ons <a href="team.html">team</a> van vakkundige
+      medewerkers helpt je graag op weg.
+    </p>
+    <form action=""></form>
+  </section>
+  <form onsubmit="hier-hebben-we-javascript-voor-nodig">
+    <button class="contact-button" type="submit">Neem contact op</button>
+  </form>
+
+  <!--  SUPPORT  -->
+  <h2>Veelgestelde vragen</h2>
+  <article class="support-elements">
+    <details>
+      <summary class="support-question">Wat is een goede domeinnaam?</summary>
+      <p class="support-answer">Een goede domeinnaam moet aan enkele eisen voldoen. Ten eerste mag jouw domeinnaam niet
+        in strijd zijn met de openbare orde of de goede zeden. Dit betekent dat je geen ongepaste domeinnaam mag registreren.
+        Verder mag een domeinnaam enkel uit letters, cijfers en eventueel een liggend streepje bestaan.
+        Andere leestekens zijn niet toegestaan.
       </p>
-      <form action=""></form>
-    </section>
+    </details>
 
-    <form onsubmit="hier-hebben-we-javascript-voor-nodig">
-      <button class="contact-button" type="submit" >Neem contact op</button>
-    </form>
-  </main>
-  <footer>
+    <details>
+      <summary class="support-question">Welke extensie moet ik kiezen voor mijn domeinnaam?</summary>
+      <p class="support-answer">Je mag helemaal zelf kiezen welke extensie jouw domeinnaam krijgt.
+        Dit kan een .nl-extensie zijn, maar ook een .be-extensie, een .de-extensie of een .com-extensie.
+        Vraag jezelf af op welke markt je je gaat richten, in het heden én in de toekomst.
+        Ben je niet van plan je business de grens over te brengen? Dan heb je eigenlijk alleen een .nl-domeinnaam nodig.
+        Je kunt andere extensies registreren om te voorkomen dat anderen dit doen,
+        maar deze domeinnamen ga je waarschijnlijk niet zelf gebruiken.
+      </p>
+    </details>
 
-  </footer>
+    <details>
+      <summary class="support-question">Wat moet ik doen als mijn domeinnaam al geregistreerd is?</summary>
+      <p class="support-answer">Is de domeinnaam die jij wil registreren, al geregistreerd door iemand anders?
+        Dan kun je deze niet opnieuw registreren. Jouw domeinnaam moet namelijk uniek zijn.
+        Als je gewenste domeinnaam al geregistreerd is, heb je twee mogelijkheden.
+        Ten eerste kun je ervoor kiezen een alternatieve domeinnaam te registreren.
+        Dit kan een domeinnaam zijn die op jouw eerste keuze lijkt, maar ook een heel ander domein.
+        Je vindt vanzelf wel een goede domeinnaam die nog vrij is.
+      </p>
+    </details>
+
+    <details>
+      <summary class="support-question">Is het mogelijk meerdere domeinnamen te registreren?
+      </summary>
+      <p class="support-answer">Ja, het is zeker mogelijk meerdere domeinnamen te registreren.
+        Als je zou willen, kun je wel tientallen domeinnamen registreren.
+        Houd er wel rekening mee dat iedere domeinnaam die je registreert, geld kost.
+        Hoe meer domeinnamen je registreert, des te meer geld je moet betalen voor deze domeinen.
+      </p>
+    </details>
+
+    <details>
+      <summary class="support-question">Is het mogelijk een domeinnaam te registreren en deze niet te gebruiken?
+      </summary>
+      <p class="support-answer">Ja, je kunt een domeinnaam registreren zonder deze te gebruiken. Dit gebeurt regelmatig.
+        Ten eerste zijn er veel ondernemers die de domeinnaam van hun nieuwe bedrijf alvast registreren,
+        terwijl ze nog lang geen website hebben. Zij willen simpelweg zeker weten dat de domeinnaam nog beschikbaar is
+        als hun website af is en registreren deze daarom alvast.
+        Verstandig, zeker als je een domeinnaam wil registreren die andere mensen ook interessant kunnen vinden.
+      </p>
+    </details>
+  </article>
+</main>
+<footer class="domeinshop-footer">
+  <p class="footer-text">Copyright © 2022, all rights reserved.</p>
+</footer>
 
 </body>
 </html>
